<resources>
    <string name="SmartHomeGarden">SmartHomeGarden</string>
    <string name="home">Home</string>
    <string name="app_name">SmartHomeGarden</string>
    <string name="sensors">Sensor</string>
    <string name="search">Search</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="Profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Get started with sprouting!</string>
    <string name="signin">Already have an account?Sign in</string>
    <string name="signup">Do not have an account?Sign up</string>
    <string name="sign">Sign in</string>
    <string name="register">REGISTER</string>
    <string name="date_format">dd MMM, yyyy</string>
    <string name="hello">"Hello, "</string>
    <string name="sir">Shawn</string>
    <string name="low_n_c">Low: \n --°C</string>
    <string name="high_n_c">High: \n --°C</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="weatherfragment">WeatherFragment</string>
    <string name="location_provider_disabled">Location provider disabled.</string>
    <string name="network_provider_is_not_enabled">Network provider is not enabled.</string>
    <string name="high">High: \n</string>
    <string name="low">Low: \n</string>
    <string name="celius">°C</string>
    <string name="tempFormat">%.2f</string>
    <string name="response_unsuccessful_or_null">Response unsuccessful or null.</string>
    <string name="api_call_failed">"API call failed: "</string>
    <string name="location_permissions_denied">Location permissions denied.</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit_the_application">Do you want to exit the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="translate">Translate</string>
    <string name="dark_light_theme">Dark/Light Theme</string>
    <string name="notification">Notification</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="registration">Registration successful!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="login">Login successful!</string>
    <string name="login_failed">Login failed!</string>
    <string name="faileddata">Failed to save user data</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="googlesign">Sign in with Google</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sensor_readings">Sensor Readings</string>
    <string name="sunlight">Sunlight</string>
    <string name="_45">45%</string>
    <string name="temperature">Temperature</string>
    <string name="_18">18°</string>
    <string name="moisture">Moisture</string>
    <string name="_14">14%</string>
    <string name="health">Health</string>
    <string name="_60">60%</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_description">Plant Description</string>
    <string name="discover">Discover</string>
    <string name="find_plants">Find Plants</string>
    <string name="search_plants">Search plants...</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notification_summary">Turn notifications on or off</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="screen_orientation_summary">Select the screen orientation mode</string>
    <string name="app_theme">App Theme</string>
    <string name="theme_summary">Choose between light, dark, or system default theme</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_summary">Send us your feedback</string>
    <string name="log_out">Log Out</string>
    <string name="logout_summary">Log out from your account</string>
    <string name="version">SmartSprout v1.0(ca)</string>
    <string name="mysharedpref">MySharedPrefTheme</string>
    <string name="notification_permission_snackbar">Notification permission denied. Please enable it in settings</string>
    <string name="user_name">John Smith</string>
    <string name="plants_count">4 plants\n</string>
    <string name="add_plant">Add plant</string>
    <string name="plant_pic">Add plant picture</string>
    <string name="add_task">Add task\n</string>
    <string name="webclient">204065205787-1g7a97om3768e9lp66bopohr43mia4pr.apps.googleusercontent.com</string>
    <string name="Phone">Phone Number</string>
    <string name="confirm">Confirm Password</string>
    <string name="invalidemail">Invalid email format</string>
    <string name="exceed">Password cannot exceed 10 characters</string>
    <string name="match">Password do not match</string>
    <string name="valid"> Enter an valid email</string>
    <string name="datauser">User data not found.</string>
    <string name="loggeddata">You need to log in first.</string>
    <string name="entdesc">Please enter a description.</string>
    <string name="feedbacksuccess">Feedback submitted successfully.</string>
    <string name="feebackfail">Failed to submit feedback.</string>
    <string name="email_password">Email and Password are required</string>
    <string name="rememberme">Remember Me</string>
    <string name="feedbackdesc">Enter your feedback</string>
    <string name="submit">Submit</string>
    <string name="plant_diagnosis">Plant Diagnosis</string>
    <string name="plant_name_diagnose">PLANT NAME</string>
    <string name="health_status">HEALTH STATUS</string>
    <string name="diagnosis_">DIAGNOSIS</string>
    <string name="invalidpasswords">Passwords do not match.</string>
    <string name="invalidphone">Phone Number is Invalid!</string>
    <string name="signedin">Already Signed In!</string>
    <string name="watering_chip">Watering</string>
    <string name="sunlight_chip">Sunlight</string>
    <string name="indoor_outdoor_chip">Indoor/Outdoor</string>
    <string name="indoor">Indoor</string>
    <string name="no_results_found">No Result Found!</string>
    <string name="share_your_thoughts_with_us">Share your thoughts with us</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="feedbackprefs">FeedbackPrefs</string>
    <string name="submission_limit">submission limit</string>
    <string name="next_feedback" formatted="false">Next feedback in: %02d:%02d:%02d</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="n_a">N/A</string>
    <string name="account">Account</string>
    <string name="summary_account">Change your account settings</string>
    <string name="choose_option">Choose Option</string>
    <string name="select_camera_or_gallery">Select Camera or Gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="failed_to_create_image">Failed to create image file</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="profile_saved">Profile saved</string>
    <string name="photos">Photos</string>
    <string name="plants">Plants</string>
    <string name="save_profile">Save Profile</string>
    <string name="full_name">Full Name</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New email</string>
    <string name="update_email">Update email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="update_password">Update Password</string>
    <string name="email_not_found">Email not found</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_is_correct">Password is correct</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="passwords_match">Passwords match</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="current_password_cannot_be_empty">Current password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New password cannot be empty</string>
    <string name="cannot_be_same_as_current_password">New password cannot be the same as the current password</string>
    <string name="regex">Password must be at least 6 characters, include an uppercase letter, a digit, and a special character</string>
    <string name="password_updated">Password updated successfully!</string>
    <string name="failed_to_update">Failed to update password. Please try again.</string>
    <string name="name_cannot_empty">Full Name cannot be empty</string>
    <string name="valid_full_name">Please enter a valid Full Name</string>
    <string name="mailto_smartsprout_gmail_com">mailto:smartsprout@gmail.com</string>
    <string name="help_request">Help Request</string>
    <string name="send_email">Send Email</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="loginprefs">loginPrefs</string>
    <string name="notifications">notifications</string>
    <string name="login_successful">Login Successful</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="toggle_temp">Convert Unit</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="need_help">Need Help?</string>
    <string name="describe_your_issue">Describe your issue</string>
    <string name="send">Send</string>
    <string name="location_services_disabled">Location Services Disabled</string>
    <string name="please_enable_location_services">Please enable location services to get weather updates for your current location.</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="time_format">hh:mm a</string>
    <string name="email_address">smartsprout@gmail.com</string>
    <string name="email_subject">Help Request</string>
    <string name="email_chooser_title">Send email...</string>
    <string name="notificationsdatbase">notifications</string>
    <string name="security_exception">"Security exception: "</string>
    <string name="location_service_not_available">Location service not available</string>
    <string name="propagation_division">Propagation: Division</string>
    <string name="low_watering">Low Watering</string>
    <string name="short_description_placeholder">Short description of the plant…</string>
    <string name="add_new_plant">Add New Plant</string>
    <string name="custom_plant_name">Custom Plant Name</string>
    <string name="special_notes">Special Notes</string>
    <string name="date_added">Date Added:</string>
    <string name="Units">Convert Units</string>
    <string name="Units_summary">Switch between Metric and Imperial Units.</string>
    <string name="whoops_no_internet">Whoops! No Internet</string>
    <string name="check_connection_message">It seems you\'re offline. Turn on Wi-Fi or Mobile Data to reconnect.</string>
    <string name="retry_connection">Try Again</string>
    <string name="offline_image">Offline State Illustration</string>
</resources>