<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Edit Profile option -->
    <Preference
        android:key="edit_profile"
        android:title="@string/account"
        android:summary="@string/summary_account"/>

    <!-- Switch for enabling/disabling notifications -->
    <SwitchPreferenceCompat
        android:key="notifications"
        android:title="@string/enable_notifications"
        android:summary="@string/notification_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="action_toggle_temp"
        android:title="@string/Units"
        android:summary="@string/Units_summary"
        android:defaultValue="false" />

    <!-- ListPreference for selecting screen orientation -->
    <ListPreference
        android:key="screen_orientation"
        android:title="@string/screen_orientation"
        android:summary="@string/screen_orientation_summary"
        android:entries="@array/orientation_options"
        android:entryValues="@array/orientation_values"
        android:defaultValue="auto" />

    <!-- ListPreference for selecting app theme -->
    <ListPreference
        android:key="app_theme"
        android:title="@string/app_theme"
        android:summary="@string/theme_summary"
        android:entries="@array/theme_options"
        android:entryValues="@array/theme_values"
        android:defaultValue="system" />
    <!-- Add feedback option -->
    <Preference
        android:key="feedback"
        android:title="@string/feedback"
        android:summary="@string/feedback_summary"
        android:icon="@drawable/ic_feedback" />
    <!-- Log Out option -->
    <Preference
        android:key="logout"
        android:title="@string/log_out"
        android:summary="@string/logout_summary"
        android:icon="@drawable/ic_logout" />

</PreferenceScreen>
