<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notification"
        android:title="@string/notification"
        android:icon="@drawable/bell"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_temp"
        android:title="@string/toggle_temp"
        app:showAsAction="never" />
    <item
        android:id="@+id/faq"
        android:title="@string/faq" />

       <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
