<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home Item -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title= "@string/home" />

    <!-- Clover Item -->
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile" />

    <!-- Search Item -->
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <!-- Stethoscope Item -->
    <item
        android:id="@+id/navigation_diagnosis"
        android:icon="@drawable/ic_pump"
        android:title="@string/water" />

    <!-- Device Item -->
    <item
        android:id="@+id/navigation_sensor"
        android:icon="@drawable/ic_sensor"
        android:title="@string/sensors" />

</menu>