<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.FeedbackActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="304dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textColor="#1E90FF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PhonefetchtextView"
        android:layout_width="303dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:textColor="#1E90FF"
        android:text="@string/Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/EmailfetchtextView2"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="17dp"
        android:text="@string/email"
        android:textColor="#1E90FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhonefetchtextView" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailfetchtextView2" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="354dp"
        android:layout_height="117dp"
        android:layout_marginTop="26dp"
        android:gravity="top|start"
        android:hint="@string/feedbackdesc"
        android:textColor="#1E90FF"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/feedbackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>