<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <ImageView
            android:id="@+id/imageOffline"
            android:layout_width="290dp"
            android:layout_height="280dp"
            android:contentDescription="@string/offline_image"
            android:scaleType="fitCenter"
            android:src="@drawable/no_internet" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/whoops_no_internet"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/check_connection_message"
        android:textColor="@color/green_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textMessage"
        tools:layout_editor_absoluteX="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRetry"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/retry_connection"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            app:rippleColor="@color/green_700" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/open_settings"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            app:rippleColor="@color/green_700" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>